# rust-research

./: .gitignore  Cargo.toml  README.md
01_BasicGrammar/: 01_BasicGrammar.md  hashmap1.rs  hello.rs  loop.rs  match1.rs  org_manage.rs  slice.rs  str.rs  str2.rs  vec_opt.rs
01_BasicGrammar/mem_opt/src/: main.rs
02_OrgManage/: main.rs  use.rs
03_Err/: err_opt.rs
04_Thread/: thread_opt.rs
projects/basic_grammar/: Cargo.toml  basic_grammar.md
projects/borsh_demo/: Cargo.toml
projects/borsh_demo/src/: main.rs
projects/ch03-common-programming-concepts/list_03_05_control_flow/: Cargo.toml
projects/ch04-understanding-ownership/src/: main.rs
projects/ch05-struct/: Cargo.toml
projects/ch05-struct/src/: main.rs
projects/ch06-enums-and-pattern/: Cargo.toml
projects/ch06-enums-and-pattern/src/: main.rs
projects/ch07-04-pub-and-use/: Cargo.toml
projects/ch07-04-pub-and-use/src/: main.rs
projects/ch07-crate-and-module/: Cargo.toml
projects/ch07-crate-and-module/src/: front_of_house.rs  main.rs
projects/ch08-common-collection/: Cargo.toml
projects/ch09-error-handing/: Cargo.toml
projects/ch10-types-traits-lifetimes/: Cargo.toml
projects/ch11-auto-test/: Cargo.toml  readme.md
projects/ch15-05-refcell/: Cargo.toml
projects/ch15-smart-points/: Cargo.toml
projects/ch20-05-macros/: Cargo.toml  readme.md
projects/crate_opt/: Cargo.toml
projects/cursor_demo/: Cargo.toml
projects/hello_solana/: Cargo.toml
projects/io_opt/: Cargo.toml
projects/mem_opt/: Cargo.toml
projects/mem_opt/src/: main.rs
projects/serde_borsh_demo/: Cargo.toml
(+13 files in other folders)
